--- a/style5.css
+++ b/style5.css
@@ -1,12 +1,11 @@
 .Top-categories-of-the-month {
-    background-color: #f5f5f5;
+    background-color: #f5f5f500;
     padding: 30px 60px;
-    border: 1px solid red;
 }
 
 .Top-categories-of-the-month-heading {
     padding-bottom: 15px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #5f5f5f;
 }
 
 .Top-categories-of-the-month-image-main-box {
@@ -14,23 +13,24 @@
 }
 
 .Top-categories-of-the-month-image-box {
-    background-color: rgb(214, 199, 199);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: rgb(255, 255, 255);
     margin: 15px 10px;
     position: relative;
     cursor: pointer;
-    border: 1px solid red;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-
+/* .Top-categories-of-the-month-image-box :hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+} */
 
 .Top-categories-of-the-month-image-box p {
     text-align: center;
     position: absolute;
-    top: 80%;
-    left: 35%;
+    top: 95%;
 }
 
 .Top-categories-of-the-month-image-box:hover #Show-Now_popup {
@@ -47,9 +47,9 @@
     position: absolute;
     height: 2px;
     width: 90px;
-    background-color: #336699;
-    top: 90%;
-    /* margin-left: 49px; */
+    background-color: #000000;
+    top: 117%;
+    left: 30px;
     display: none;
 }
 
@@ -57,8 +57,6 @@
     display: none;
     color: #336699;
     font-weight: 600;
-    /* margin-left: 49px; */
-    /* left: 0; */
 }
 
 .Top-categories-of-the-month-image-box:hover p {
@@ -82,6 +80,7 @@
 }
 
 #Show-Now_popup-line {
+    position: relative;
     opacity: 0;
     transform: translateY(-10px);
     transition: opacity 1s ease, transform 1s ease;
