--- a/style1.css
+++ b/style1.css
@@ -1,8 +1,17 @@
+body {
+    padding: 0;
+    margin: 0;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 #navbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #FFE5CA;
+    background-color: #7fb5ff;
     padding: 0px;
     /* border: 1px solid red; */
     /* padding: 25px; */
@@ -13,7 +22,7 @@
     justify-content: center;
     align-items: center;
     padding: 0px 20px;
-    background-color: rgb(225, 225, 225);
+    background-color:#e0dede;
 }
 
 #circule {
@@ -46,7 +55,7 @@
 }
 
 form {
-    background: whitesmoke;
+    background: #f5eaea;
     width: 370px;
     height: 40px;
     display: flex;
@@ -58,17 +67,19 @@ form input {
     flex: 1;
     border: none;
     outline: none;
-    background-color: #f5f5f5;
+    background-color: #f5eaea;
 }
 
 form .searchbar-btn {
-    background: rgb(245, 245, 245);
-    background: linear-gradient(90deg, rgba(245, 245, 245, 1) 0%, rgba(0, 212, 255, 1) 61%);
+    background: #f5eaea;
     padding: 10px 20px;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
+    border-left: 1px solid rgb(0, 0, 0);
+    border-right: none;
+    border-top: none;
+    border-bottom: none;
     outline: none;
-    border: none;
     color: rgb(0, 0, 0);
     letter-spacing: 1px;
     cursor: pointer;
@@ -118,7 +129,7 @@ form .fa-magnifying-glass {
 }
 
 .navlinks ul li:hover {
-    background-color: #E74646;
+    background-color: #62a4ff;
 }
 
 .navlinks ul {
@@ -136,7 +147,7 @@ form .fa-magnifying-glass {
 
 .browser-catagorey {
     display: flex;
-    background-color: #FFE5CA;
+    background-color: #7fb5ff;
     padding: 18px 18px 18px 18px;
     border-right: 1px solid black;
     /* border: 1px solid #FFE5CA; */
@@ -380,9 +391,9 @@ form .fa-magnifying-glass {
 
 /* -------------- */
 .mega-menu {
-    border-top: 3px solid #E74646;
+    border-top: 3px solid #62a4ff;
     padding: 15px;
-    background: none repeat scroll 0 0 #FA9884;
+    background: none repeat scroll 0 0 #fffbfa;
     margin-top: 20px;
     position: absolute;
     width: 1300px;
@@ -463,7 +474,7 @@ form .fa-magnifying-glass {
 }
 
 .left-images>p {
-    background: none repeat scroll 0 0 #ff7f50;
+    background: none repeat scroll 0 0 #62a4ff;
     display: block;
     font-size: 18px;
     line-height: normal;
@@ -483,7 +494,7 @@ form .fa-magnifying-glass {
 
 .categories-list ul .li .mm-view-more {
     transition: transform 0.5s;
-    background: none repeat scroll 0 0 #ff7f50;
+    background: none repeat scroll 0 0 #62a4ff;
     color: #fff;
     display: inline !important;
     line-height: normal;
@@ -508,6 +519,7 @@ img {
     max-width: 1349px;
     position: relative;
     margin: auto;
+    padding-top: 10px;
     /* border: 1px solid red; */
 }
 
@@ -581,4 +593,87 @@ img {
     to {
         opacity: 1
     }
+}
+
+.Top-categories-of-the-month {
+    background-color: #f5f5f500;
+    padding: 10px;
+}
+
+.Top-categories-of-the-month-heading {
+    border-bottom: 1px solid #5f5f5f;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.Top-categories-of-the-month-image-main-box {
+    max-width: 1345px;
+    /* border: 1px solid #5f5f5f; */
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
+
+.Top-categories-of-the-month-image-main-box::-webkit-scrollbar {
+    display: none;
+}
+
+.Top-categories-of-the-month-image-box {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: rgb(255, 255, 255);
+    margin: 15px 17px;
+    margin-bottom: 30px;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.Top-categories-of-the-month-image-box:hover {
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.Top-categories-of-the-month-image-box p {
+    text-align: center;
+    position: absolute;
+    top: 95%;
+}
+
+.Top-categories-of-the-month-image-box:hover #Show-Now_popup {
+    display: block;
+}
+
+#Show-Now_popup {
+    display: none;
+    color: #336699;
+    font-weight: 600;
+}
+
+.Top-categories-of-the-month-image-box:hover p {
+    display: none;
+}
+
+.Top-categories-of-the-month-image-box img {
+    width: 150px;
+}
+
+.Top-categories-of-the-month-image-box img:hover {
+    transform: scale(1.05);
+    transition: all 0.3s linear;
+}
+
+.catagories-arrow {
+    padding: 5px 10px;
+    background: #ffffff;
+    color: rgb(0, 0, 0);
+    border: 1px solid black;
+}
+
+.catagories-arrow:hover {
+    background: #868686;
+    color: rgb(255, 255, 255);
+    border: 1px solid #868686;
 }
