--- a/style5.css
+++ b/style5.css
@@ -14,14 +14,19 @@
 
 .Top-categories-of-the-month-image-main-box {
     max-width: 1250px;
-    /* border: 1px solid #5f5f5f; */
+    border: 1px solid #5f5f5f;
     display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
 }
-
+.Top-categories-of-the-month-image-main-box::-webkit-scrollbar{
+    display: none;
+}
 .Top-categories-of-the-month-image-box {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-color: rgb(255, 255, 255);
     margin: 15px 17px;
+    margin-bottom: 30px;
     position: relative;
     cursor: pointer;
     display: flex;
