--- a/style1.css
+++ b/style1.css
@@ -677,3 +677,246 @@ img {
     color: rgb(255, 255, 255);
     border: 1px solid #868686;
 }
+/*----------------------- product slider------------------ */
+.maincontainer {
+    width: 1345px;
+    /* height: 500px; */
+    background-color: rgb(231, 230, 229);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    /* border: 1px solid black; */
+}
+
+.maincontainer-image {
+    width: 30%;
+    /* height: 480px; */
+    background-color: rgb(231, 231, 233);
+    /* padding: 10px; */
+    /* border: 1px solid red; */
+    overflow: hidden;
+
+}
+
+.maincontainer-image img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.nav-slider {
+    width: 70%;
+    /* height: 500px; */
+    background-color: rgb(231, 231, 233);
+    position: relative;
+}
+
+.navbar {
+    width: 100%;
+    height: 50px;
+    /* border: 1px solid black; */
+    background-color: rgb(231, 231, 233);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+
+}
+
+.navbar li {
+    float: left;
+}
+
+.navbar h1 {
+    margin-left: 10px;
+    padding: 5px;
+}
+
+.navbar ul li {
+    list-style: none;
+    position: relative;
+
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    text-decoration: none;
+    margin: 15px;
+    color: rgb(119, 113, 113);
+}
+
+.navbar ul li a::after {
+    content: " ";
+    height: 1px;
+    width: 0;
+    background: #0f0f0f;
+    left: 0;
+    position: absolute;
+    bottom: -10px;
+    transition: 0.5s;
+}
+
+.navbar ul li a:hover:after {
+    width: 100%;
+}
+
+.slider {
+    width: 100%;
+    position: relative;
+    border: 1px solid rgb(233, 18, 18);
+}
+
+.slider-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    border: 1px solid black;
+    margin: auto;
+    align-items: center;
+    position: relative;
+}
+.slider-container::-webkit-scrollbar{
+    display: none;
+}
+
+.slider-product {
+    width: 200px;
+    height: 400px;
+    background-color: chartreuse;
+    border-radius: 2%;
+    margin-left: 20px;
+    margin-top: 20px;
+    /* border: 1px solid black; */
+}
+
+.slider-product::-webkit-scrollbar {
+    display: none;
+}
+
+.slider-image {
+    width: 198px;
+    height: 47%;
+    overflow: hidden;
+    /* border: 1px solid black; */
+    position: relative;
+}
+
+.slider-img-details {
+    width: 155px;
+    height: 155px;
+    padding: 17px;
+    margin-top: 1px;
+    position: relative;
+    overflow: hidden;
+}
+
+.info {
+    width: 88%;
+    height: 50%;
+    /* border: 1px solid black; */
+    border-radius: 1px;
+    margin-left: 11px;
+    margin-top: 3px;
+}
+
+.product-name {
+    width: 100%;
+    height: 20px;
+    opacity: 1;
+    font-family: serif;
+    color: #161587;
+    margin-left: 10px;
+    margin-top: 4px;
+}
+
+.brand {
+    margin-top: 25px;
+    color: rgba(0, 0, 0, 0.5);
+    margin-left: 9px;
+    font-size: 21px;
+}
+
+.stockdetails {
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.price {
+    margin-left: 8px;
+    margin-top: 11px;
+    font-size: 20px;
+}
+
+.actual-price {
+    margin-left: 7px;
+    opacity: 0.5;
+    text-decoration: line-through;
+    font-size: 17px;
+}
+
+.addToCard {
+    width: 85%;
+    height: 35px;
+    padding: 8px;
+    margin-left: 13px;
+    margin-top: 4px;
+    background-color: yellow;
+    color: black;
+    text-align: center;
+    font-size: 13px;
+}
+ /* .pre-btn{
+    position: relative;
+    top: 50%;
+    left: 0%;
+    font-size: 20px;
+    width: 50px; 
+     padding: 10px;
+    z-index: 99;} 
+
+.nxt-btn{
+    position: relative;
+    top: 50%; 
+    right: -95%;
+    /* font-size: 20px;
+    width: 50px;
+    padding: 10px;
+    z-index: 99;
+} */
+.pre-btn,
+.nxt-btn {
+  border: none;
+  width: 6vw;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #dbd9d9 100%);
+  cursor: pointer;
+  z-index: 8;
+  font-size: 70px;
+}
+
+.pre-btn {
+  left: 0;
+  transform: rotate(180deg);
+}
+
+.nxt-btn {
+  right: 0;
+  
+}
+
+.pre-btn,
+.nxt-btn  {
+  opacity: 0;
+}
+
+.pre-btn:hover,
+.nxt-btn:hover  {
+  opacity: 1;
+}
