--- a/style5.css
+++ b/style5.css
@@ -1,80 +1,77 @@
-.Top-categories-of-the-month {
-    background-color: #f5f5f500;
-    padding: 30px 60px;
-    /* border: 1px solid #ff0000; */
-}
-
-.Top-categories-of-the-month-heading {
-    /* padding-bottom: 15px; */
-    border-bottom: 1px solid #5f5f5f;
+.header1{
     display: flex;
+    background: #bdbdbd;
+    height: 50px;
+    width: 100%;
+}
+.navber-ul{
+    display: flex;
+    list-style: none;
+    padding: 0px;
+    float: left;
+}
+.catagori-box{
     align-items: center;
-    justify-content: space-between;
-}
-
-.Top-categories-of-the-month-image-main-box {
-    max-width: 1250px;
-    border: 1px solid #5f5f5f;
     display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-}
-.Top-categories-of-the-month-image-main-box::-webkit-scrollbar{
-    display: none;
-}
-.Top-categories-of-the-month-image-box {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background-color: rgb(255, 255, 255);
-    margin: 15px 17px;
-    margin-bottom: 30px;
-    position: relative;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-}
-
-.Top-categories-of-the-month-image-box:hover{
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-}
-
-.Top-categories-of-the-month-image-box p {
-    text-align: center;
-    position: absolute;
-    top: 95%;
-}
-
-.Top-categories-of-the-month-image-box:hover #Show-Now_popup {
-    display: block;
-}
-
-#Show-Now_popup {
-    display: none;
-    color: #336699;
-    font-weight: 600;
-}
-
-.Top-categories-of-the-month-image-box:hover p {
-    display: none;
-}
-
-.Top-categories-of-the-month-image-box img {
-    width: 150px;
-}
-
-.Top-categories-of-the-month-image-box img:hover {
-    transform: scale(1.05);
-    transition: all 0.3s linear;
-}
-.catagories-arrow{
-    padding: 5px 10px;
-    background: #ffffff;
-    color: rgb(0, 0, 0);
     border: 1px solid black;
+    padding: 10px;
+    gap: 8px;
+    width: 180px;
 }
-.catagories-arrow:hover{
-    background: #868686;
-    color: rgb(255, 255, 255);
-    border: 1px solid #868686;
+.cat-icon-details{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+.cat-icon{
+    /* border: 1px solid black; */
+    width: 20px;
+}
+#circule {
+    width: 4px;
+    height: 4px;
+    background-color: #353535;
+    border-radius: 50%;
+    margin-top: 2px;
+}
+
+#line {
+    width: 13px;
+    height: 2px;
+    background-color: #353535;
+    margin-top: 3px;
+    margin-left: 3px;
+    border-radius: 5px;
+}
+
+.dot-and-line {
+    display: flex;
+}
+.navber-ul-li{
+    display: inline-block;
+    margin: 0px 10px;
+}
+.navber-ul-li-a{
+    text-decoration: none;
+}
+.searchbar{
+    display: flex;
+    align-items: center;
+    float: right;
+}
+.searchbar form{
+    background: white;
+    padding-left: 10px;
+}
+.searchbar input{
+    outline: none;
+    border: none;
+}
+.searchbar button{
+    color: azure;
+    padding: 10px;
+    font-size: 15px;
+    outline: none;
+    border: none;
+    background: rgb(37, 37, 255);
 }
