--- a/style5.css
+++ b/style5.css
@@ -1,20 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;900&display=swap');
-.header1{
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.header1 {
     display: flex;
+    justify-content: space-between;
+    background: #ffffff;
+}
+
+.weblogo {
+    padding: 10px;
+}
+
+.wish-compare-cart {
+    padding: 10px;
+    gap: 5px;
+}
+
+.user-profile {
+    background-color: #FFD369;
+    border-radius: 25px;
+    width: 120px;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.user-profile img {
+    width: 25px;
+    padding: 1px;
+    border-radius: 50%;
+    background-color: #ffffff;
+}
+
+.weblogo img {
+    width: 150px;
+    height: 100%;
+}
+
+.wcc {
+    width: 20px;
+    height: 20px;
+    padding: 10px;
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
 }
-.wish-compare-cart{
+
+.wcc:hover {
+    background-color: #FFD369;
+}
+
+.wish-compare-cart {
     display: flex;
 }
+
 .header2 {
     display: flex;
-    background: #bdbdbd;
+    background: #FFD369;
     height: 50px;
     justify-content: space-between;
 }
-.browser-catagorey{
+
+.browser-catagorey {
     font-family: 'Montserrat', sans-serif;
 }
+
 .navber-ul {
     display: flex;
     /* flex-wrap: wrap; */
@@ -24,12 +84,15 @@
     /* float: left; */
     /* height: 100%; */
 }
+
 .catagori-box {
     align-items: center;
     display: flex;
     border-right: 1px solid black;
     padding: 0px 10px;
     gap: 8px;
+    cursor: pointer;
+    position: relative;
     /* width: 180px; */
 }
 
@@ -67,22 +130,30 @@
 
 .navber-ul-li {
     display: inline-block;
-    /* border: 1px solid black; */
     height: 100%;
     margin: 0px 10px;
     display: flex;
     align-items: center;
+    cursor: pointer;
+    position: relative;
+}
+
+.navber-ul-li:hover {
+    background: #ffb915;
 }
 
 .navber-ul-li-a {
     text-decoration: none;
     color: #000;
     font-family: 'Montserrat', sans-serif;
+    padding: 0px 5px;
     /* font-weight: 600; */
 }
-.navber-ul-li-a i{
+
+.navber-ul-li-a i {
     margin-left: 5px;
 }
+
 .searchbar {
     display: flex;
     align-items: center;
@@ -94,9 +165,11 @@
     align-items: center;
     background: white;
 }
-.searchbar form i{
+
+.searchbar form i {
     padding: 0px 10px;
 }
+
 .searchbar input {
     outline: none;
     border: none;
@@ -108,19 +181,141 @@
     font-size: 15px;
     outline: none;
     border: none;
-    background: rgb(37, 37, 255);
+    background: #393E46;
     font-family: 'Montserrat', sans-serif;
 
 }
 
+.dropdown-content {
+    /* border: 1px solid black; */
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.navber-ul-li:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.mobview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 10px;
+    display: none;
+}
+
+.categorey-box {
+    top: 50px;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    visibility: hidden;
+    opacity: 0;
+    transition: 1s;
+}
+
+.categorey-box img {
+    width: 20px;
+    padding-right: 10px;
+}
+
+.categorey-box a {
+    padding: 10px;
+    border-bottom: 1px solid #ececec;
+    color: #4a4a4a;
+    font-size: 15px;
+    display: flex;
+    position: relative;
+    transition: transform 0.5s;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.categorey-box a:hover .rarr {
+    transform: translateX(5px);
+}
+
+.categorey-box a:hover {
+    transform: scale(0.9);
+}
+
+.rarr {
+    font-size: 10px;
+    margin: 0px;
+    position: absolute;
+    right: 7px;
+}
+
+.catagori-box:hover>.categorey-box {
+    max-height: 451px;
+    opacity: 1;
+    visibility: visible;
+    transition: all .3s ease-in;
+}
+
 @media (max-width: 1024px) {
-    .catagori-box{
+    .catagori-box {
         display: none;
     }
-    .navber-ul{
+
+    .navber-ul {
         display: none;
     }
-    /* .searchbar input {
+
+    .mobview {
+        padding: 16px 16px;
+        display: block;
+    }
+
+    .searchbar {
+        /* border: 1px solid black; */
+        padding: 0;
         width: 100%;
-    } */
+    }
+
+    .searchbar form {
+        /* border: 1px solid black; */
+        width: 100%;
+    }
+
+    .searchbar input {
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .wish-compare-cart {
+        display: none;
+    }
+
+    .header1 {
+        display: flex;
+        justify-content: center;
+    }
 }
